# drunk

./: .gitignore  ChangeLog.md  LICENSE  README.md  drunk.cabal  package.yaml
nn/cnn/: background.py  demo.py  motion.py  optical_flow.py
nn/cnn/table/: table.py
src/frontend/: CMakeLists.txt
src/frontend/src/: fart.cpp  opticalflow.hpp
src/nn/: TSN.py  audio.py  dataset.py  demo.py  export.py  image.py  label.py  main.py  models.py  optical_flow.py  saveFrames.py
src/util/: post_processing.py  weights.py
